# rpicam-tcp-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  config_loader.py
examples/01_basico/: guardar_frame.py  mostrar_video.py  mostrar_video_configurado.py
examples/02_intermedio/: detectar_movimiento.py  grabar_video.py  guardar_frames.py
examples/03_avanzado/: calibrar_camara.py  detector_color.py  medir_distancia_visual.py
server/: README.md  servidor_camara_tcp.py
src/rpicam_tcp_client/: __init__.py  client.py
tests/: test_camera_client.py  test_config_loader.py  test_smoke.py
