[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpicam-tcp-client"
version = "0.6.0"
description = "Python TCP client library for Raspberry Pi Camera Module 2 NoIR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "tqdm",
]
license = {text = "MIT"}
authors = [
    {name = "Pablo M. Tarrío", email = "pablo.tarrio@uie.edu"}
]
keywords = ["raspberry-pi", "camera", "noir", "tcp", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/PabloTarrio/rpicam-tcp-client"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=rpicam_tcp_client --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 95

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]